@@ -73,6 +73,7 @@ Bug fixes / Maintenance
   rather than having dist-related code in the generic py.test 
   distribution
 - fix homedir detection on Windows 
+- ship distribute_setup.py version 0.6.13
 
 Changes between 1.3.0 and 1.3.1
 ==================================================
